Adicionando tempo total utilizado aos KPI´s

--- a/Functions/tratando_bases.ipynb
+++ b/Functions/tratando_bases.ipynb
@@ -1871,6 +1871,269 @@
     "\n",
     "df_final"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58cfa132",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import os\n",
+    "import glob\n",
+    "from pathlib import Path\n",
+    "from dictionaries import obter_dicionarios\n",
+    "\n",
+    "def criando_df_final_Rentabilidade(vmb_concat_path,custo_fixo): \n",
+    "# Essa Função Junta o VMB com a base de Custos Fixo formatada de forma exata e gera uma planilha niccolucci completa\n",
+    "#\"Bases/Venda Mesal Bruta/2024/vmb_2024_concat.csv\"\n",
+    "#\"Bases/Custos Fixos/2024/CF-txSala.xlsx\"\n",
+    "\n",
+    "    Appointments_dic, Sales_dic, Month_dic, duration_dic, all_costs_2024 = obter_dicionarios()\n",
+    "\n",
+    "    vmb_concat = pd.read_csv(vmb_concat_path,low_memory=False)\n",
+    "    custo_fixo = pd.read_excel(custo_fixo)\n",
+    "\n",
+    "    vmb_concat_columns = ['ID orçamento','ID cliente', 'Status','Mês venda',\n",
+    "                        'Unidade','Valor líquido','Procedimento','Quantidade',\n",
+    "                        'Valor tabela item', 'Valor liquido item']\n",
+    "\n",
+    "\n",
+    "\n",
+    "    vmb_concat = vmb_concat[vmb_concat_columns]\n",
+    "\n",
+    "    columns_to_fill_nan = ['Valor liquido item','Valor tabela item','Valor líquido']\n",
+    "\n",
+    "    vmb_concat[columns_to_fill_nan] = vmb_concat[columns_to_fill_nan].fillna(0)\n",
+    "\n",
+    "    vmb_concat = vmb_concat.loc[vmb_concat[\"Status\"] == \"Finalizado\"]\n",
+    "\n",
+    "    # Tirando unidade que não contam e unidades que fecharam\n",
+    "\n",
+    "    branchs_to_remove = ['RIBEIRÃO PRETO','BELO HORIZONTE',\n",
+    "                        'INSIDE SALES', 'nan', 'Matriz BKO',\n",
+    "                        'PRAIA GRANDE', 'LOJA ONLINE']\n",
+    "\n",
+    "    vmb_concat = vmb_concat.loc[~vmb_concat['Unidade'].isin(branchs_to_remove)]\n",
+    "\n",
+    "    # Valores menor que 1 como zero\n",
+    "    vmb_concat.loc[vmb_concat['Valor liquido item'] <= 1, 'Valor liquido item'] = 0\n",
+    "\n",
+    "    # Trocando Mês nan por março (verificado)\n",
+    "    vmb_concat.loc[vmb_concat['Mês venda'].isna(), 'Mês venda'] = \"Março\"\n",
+    "\n",
+    "    # Procedimentos Nan como Vale Presente: \n",
+    "    vmb_concat.loc[vmb_concat['Procedimento'].isna(),'Procedimento'] = \"Vale Presente\"\n",
+    "\n",
+    "    # Unidades Nan como \"Sorocaba\" (validado)\n",
+    "    vmb_concat.loc[vmb_concat['Unidade'].isna(),'Unidade'] = \"SOROCABA\"\n",
+    "\n",
+    "    # Quantidade como Nan como 1 (validado): \n",
+    "    vmb_concat.loc[vmb_concat['Quantidade'].isna(),'Quantidade'] = 1\n",
+    "\n",
+    "    # Quantidade \"Finalizado\" para 1\n",
+    "    vmb_concat.loc[vmb_concat['Quantidade'] == \"Finalizado\", 'Quantidade'] = 1\n",
+    "\n",
+    "    #tratando Procedimentos\n",
+    "    vmb_concat[\"Procedimento_padronizado\"] = vmb_concat['Procedimento'].map(Sales_dic)\n",
+    "\n",
+    "    #Quantidade de Vale Presente para 1: \n",
+    "    vmb_concat.loc[vmb_concat['Procedimento_padronizado'] == \"VALE PRESENTE\",'Quantidade'] = 1\n",
+    "\n",
+    "    # Tirando depilação: \n",
+    "    vmb_concat = vmb_concat.loc[vmb_concat['Procedimento_padronizado'] != \"DEPILACAO\"]\n",
+    "\n",
+    "    # Colunas de custo: \n",
+    "    vmb_concat['Custo Produto'] = vmb_concat['Procedimento_padronizado'].map(lambda x: all_costs_2024.get(x, {}).get('CUSTO PRODUTO', 0))\n",
+    "    vmb_concat['Custo Insumos'] = vmb_concat['Procedimento_padronizado'].map(lambda x: all_costs_2024.get(x, {}).get('CUSTO INSUMOS', 0))\n",
+    "    vmb_concat['Custo Mod'] = vmb_concat['Procedimento_padronizado'].map(lambda x: all_costs_2024.get(x, {}).get('MOD', 0))\n",
+    "\n",
+    "    vmb_concat['Custo Direto'] = vmb_concat['Custo Produto'] + vmb_concat['Custo Insumos'] + vmb_concat['Custo Mod']\n",
+    "\n",
+    "    vmb_concat[\"Quantidade\"] = vmb_concat[\"Quantidade\"].replace(\".\",\",\")\n",
+    "\n",
+    "    vmb_concat['Quantidade'] = pd.to_numeric(vmb_concat['Quantidade'],errors='coerce')\n",
+    "\n",
+    "    vmb_concat['Quantidade'] = vmb_concat['Quantidade'].astype(int)\n",
+    "\n",
+    "    vmb_concat['Custo Direto Total'] = vmb_concat['Custo Direto'] * vmb_concat['Quantidade']\n",
+    "\n",
+    "    vmb_concat['Valor unitário'] = vmb_concat['Valor liquido item'] / vmb_concat['Quantidade']\n",
+    "    \n",
+    "    vmb_concat[\"Valor tabela total\"] = vmb_concat['Valor tabela item'] * vmb_concat['Quantidade']\n",
+    "\n",
+    "    #dropndo colunad não utilizadas mais\n",
+    "    vmb_concat = vmb_concat.drop(columns=['Custo Direto'])\n",
+    "\n",
+    "    vmb_concat[\"Cortesia?\"] = (vmb_concat['Procedimento'].str.contains(\"CORTESIA\", case=False) | (vmb_concat['Valor liquido item'] == 0))\n",
+    "\n",
+    "    # Trazendo os Custos de Vendas para o DF:\n",
+    "    cartao = 0.0818\n",
+    "    imposto = 0.1425\n",
+    "    comissao = 0.04\n",
+    "\n",
+    "    cmv = cartao + imposto + comissao\n",
+    "\n",
+    "    vmb_concat['Custo Sobre Venda'] = vmb_concat['Valor liquido item'] * cmv\n",
+    "\n",
+    "    # Colocando Tempo dos procedimentos\n",
+    "    vmb_concat[\"Tempo Procedimento\"] = vmb_concat['Procedimento_padronizado'].map(duration_dic)\n",
+    "\n",
+    "    #tratando o tempo\n",
+    "    vmb_concat['Tempo Procedimento'] = pd.to_timedelta(vmb_concat['Tempo Procedimento']).dt.total_seconds() // 60\n",
+    "\n",
+    "    vmb_concat['Tempo Total'] = vmb_concat['Tempo Procedimento'] * vmb_concat[\"Quantidade\"]\n",
+    "\n",
+    "    vmb_concat_columns = ['ID orçamento', 'ID cliente', 'Status', 'Mês venda', 'Unidade',\n",
+    "                        'Valor líquido','Procedimento_padronizado', 'Quantidade',\n",
+    "                        'Valor tabela item', 'Valor tabela total', 'Valor liquido item','Valor unitário','Tempo Total', 'Custo Produto',\n",
+    "                        'Custo Insumos', 'Custo Mod', 'Custo Direto Total', 'Custo Sobre Venda','Cortesia?']\n",
+    "\n",
+    "\n",
+    "\n",
+    "    vmb_concat = vmb_concat[vmb_concat_columns]\n",
+    "\n",
+    "    vmb_concat = vmb_concat.rename(columns={\"Tempo Total\" : \"Tempo Utilizado\"})\n",
+    "\n",
+    "    # Horas utilizadas por unidade: \n",
+    "    \n",
+    "    df_tempo_pago = vmb_concat.groupby(['Unidade']).agg({\"Tempo Utilizado\" : 'sum'}).reset_index()\n",
+    "\n",
+    "    # Aqui fazer groupby por unidade tbm e mês? \n",
+    "    df_tempo_pago_mes = vmb_concat.groupby(['Unidade','Mês venda']).agg({\"Tempo Utilizado\" : 'sum'}).reset_index()\n",
+    "\n",
+    "    print(df_tempo_pago)\n",
+    "    print(df_tempo_pago_mes.sample(20))\n",
+    "\n",
+    "    #Merge da base CF com DF de tempo Utilizado\n",
+    "\n",
+    "    df_merged_cf = pd.merge(df_tempo_pago_mes,custo_fixo,how='left')\n",
+    "\n",
+    "    df_merged_cf[\"Valor Tempo Utilizado\"] = df_merged_cf['Tempo Utilizado'] * df_merged_cf['Taxa Sala (Min)']\n",
+    "\n",
+    "    df_merged_cf['Tempo Ocioso'] = df_merged_cf['Minutos Disponivel'] - df_merged_cf['Tempo Utilizado']\n",
+    "\n",
+    "    df_merged_cf[\"Valor Tempo Ocioso\"] = df_merged_cf['Tempo Ocioso'] * df_merged_cf['Taxa Sala (Min)']\n",
+    "\n",
+    "    df_merged_cf_columns = ['Unidade', 'Custo Fixo', 'Custo Fixo + Bko','Meses Funcionando',\n",
+    "                            'Dias uteis', 'Hora/Dia', 'Salas','Minutos Disponivel', \n",
+    "                            'Taxa Sala (Hr)', 'Taxa Sala (Min)','Tempo Utilizado',\n",
+    "                            'Valor Tempo Utilizado', 'Tempo Ocioso','Valor Tempo Ocioso']\n",
+    "\n",
+    "    df_merged_cf = df_merged_cf[df_merged_cf_columns]\n",
+    "\n",
+    "    df_merged_cf[\"Taxa Ociosidade (Min)\"] = df_merged_cf[\"Valor Tempo Ocioso\"] / df_merged_cf['Tempo Utilizado']\n",
+    "\n",
+    "    df_merged_cf\n",
+    "    \n",
+    "    # colocar mês aqui?\n",
+    "    df_taxa_sala_ociosidade = df_merged_cf.groupby(['Unidade']).agg({'Taxa Sala (Min)' : \"sum\",\"Taxa Ociosidade (Min)\" : 'sum' }).reset_index()\n",
+    "    \n",
+    "    df_taxa_sala_ociosidade\n",
+    "\n",
+    "    print(df_taxa_sala_ociosidade)\n",
+    "\n",
+    "    ## Merge da base de Vendas concat com a tx sala e ociosidade - Base FInal para ANálise e Groupbys\n",
+    "\n",
+    "    df_final = pd.merge(vmb_concat,df_taxa_sala_ociosidade,how='left')\n",
+    "\n",
+    "    df_final[\"Custo Fixo\"] = ((df_final['Tempo Utilizado']* df_final['Taxa Sala (Min)']) + (df_final['Tempo Utilizado']* df_final['Taxa Ociosidade (Min)']))\n",
+    "\n",
+    "    receita_gerada = df_final['Valor liquido item'].sum()\n",
+    "\n",
+    "    df_final['Custo Total'] = df_final['Custo Fixo'] + df_final['Custo Direto Total'] + df_final['Custo Sobre Venda']\n",
+    "\n",
+    "    df_final['Lucro'] = df_final['Valor liquido item'] - df_final['Custo Total']\n",
+    "\n",
+    "    #print(df_final)\n",
+    "\n",
+    "    return df_final\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "83f52e43",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         Unidade  Tempo Utilizado\n",
+      "0     ALPHAVILLE         171930.0\n",
+      "1       CAMPINAS         181910.0\n",
+      "2     COPACABANA         457020.0\n",
+      "3      GUARULHOS           1020.0\n",
+      "4       IPIRANGA         295445.0\n",
+      "5          ITAIM         152735.0\n",
+      "6        JARDINS         592775.0\n",
+      "7           LAPA         399400.0\n",
+      "8       LONDRINA         203250.0\n",
+      "9          MOEMA         357205.0\n",
+      "10         MOOCA         184900.0\n",
+      "11        OSASCO         251035.0\n",
+      "12   SANTO AMARO         357565.0\n",
+      "13        SANTOS         336420.0\n",
+      "14      SOROCABA         173620.0\n",
+      "15  SÃO BERNARDO          39835.0\n",
+      "16       TATUAPÉ         416960.0\n",
+      "17        TIJUCA         453015.0\n",
+      "18      TUCURUVI         207720.0\n",
+      "19  VILA MASCOTE          54720.0\n",
+      "         Unidade  Mês venda  Tempo Utilizado\n",
+      "138  SANTO AMARO      Março          29745.0\n",
+      "162     SOROCABA      Março          13020.0\n",
+      "87      LONDRINA      Julho          14625.0\n",
+      "148       SANTOS      Junho          29275.0\n",
+      "49         ITAIM  Fevereiro          10965.0\n",
+      "126       OSASCO      Março           9075.0\n",
+      "143       SANTOS     Agosto          27620.0\n",
+      "92      LONDRINA    Outubro          16125.0\n",
+      "94         MOEMA      Abril          32545.0\n",
+      "108        MOOCA   Dezembro          13855.0\n",
+      "16      CAMPINAS       Maio          15170.0\n",
+      "32    COPACABANA   Setembro          28730.0\n",
+      "10      CAMPINAS     Agosto          18700.0\n",
+      "55         ITAIM   Novembro          24650.0\n",
+      "190       TIJUCA      Março          51155.0\n",
+      "43      IPIRANGA   Novembro          38865.0\n",
+      "110        MOOCA    Janeiro          13790.0\n",
+      "4     ALPHAVILLE      Junho          20470.0\n",
+      "19      CAMPINAS    Outubro          12795.0\n",
+      "31    COPACABANA    Outubro          33285.0\n",
+      "         Unidade  Taxa Sala (Min)  Taxa Ociosidade (Min)\n",
+      "0     ALPHAVILLE         0.833949               2.518728\n",
+      "1       CAMPINAS         0.509194               3.553835\n",
+      "2     COPACABANA         1.455336               1.846253\n",
+      "3      GUARULHOS         1.150509              96.304339\n",
+      "4       IPIRANGA         0.905971               2.909200\n",
+      "5          ITAIM         0.988313               4.378803\n",
+      "6        JARDINS         1.810496               3.256174\n",
+      "7           LAPA         0.842396               1.781728\n",
+      "8       LONDRINA         0.613585               3.768360\n",
+      "9          MOEMA         0.969579               2.970354\n",
+      "10         MOOCA         0.772411               3.558770\n",
+      "11        OSASCO         0.751528               2.973137\n",
+      "12   SANTO AMARO         0.978429               2.426049\n",
+      "13        SANTOS         0.786064               3.090000\n",
+      "14      SOROCABA         1.205401               3.113547\n",
+      "15  SÃO BERNARDO         0.900695               4.959985\n",
+      "16       TATUAPÉ         1.692225               2.515610\n",
+      "17        TIJUCA         1.146827               1.477877\n",
+      "18      TUCURUVI         0.787399               3.928807\n",
+      "19  VILA MASCOTE         1.051665               2.269381\n"
+     ]
+    }
+   ],
+   "source": [
+    "b1 = \"C:/Users/novo1/OneDrive/Desktop/Dev/Rentabilidade Anual/Bases/Venda Mesal Bruta/2024/vmb_2024_concat.csv\"\n",
+    "b2 = \"C:/Users/novo1/OneDrive/Desktop/Dev/Rentabilidade Anual/Bases/Custos Fixos/2024/CF-txSala.xlsx\"\n",
+    "\n",
+    "df_final = criando_df_final_Rentabilidade(b1, b2)"
+   ]
   }
  ],
  "metadata": {
