Tratativa em tratando as bases

--- a/Functions/tratando_bases.ipynb
+++ b/Functions/tratando_bases.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "2ebd5e52",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "b77dc804",
    "metadata": {},
    "outputs": [],
@@ -671,10 +671,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "e3f8296c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Base vmb_2025_01.xlsx Concatenada com Sucesso!\n",
+      "Base vmb_2025_02.xlsx Concatenada com Sucesso!\n",
+      "Base vmb_2025_03.xlsx Concatenada com Sucesso!\n",
+      "Base vmb_2025_04.xlsx Concatenada com Sucesso!\n",
+      "Base vmb_2025_05.xlsx Concatenada com Sucesso!\n"
+     ]
+    }
+   ],
    "source": [
     "arquivos = os.listdir(\"C:/Users/novo1/OneDrive/Desktop/Dev/Rentabilidade Anual/Bases/Venda Mesal Bruta/2025\")\n",
     "\n",
@@ -684,9 +696,11 @@
     "    if arquivo.endswith('.xlsx'):\n",
     "        df = pd.read_excel(f'C:/Users/novo1/OneDrive/Desktop/Dev/Rentabilidade Anual/Bases/Venda Mesal Bruta/2025/{arquivo}')\n",
     "        lista_arquvios.append(df)\n",
+    "        print(f\"Base {arquivo} Concatenada com Sucesso!\")\n",
     "\n",
     "vmb_2025_concat = pd.concat(lista_arquvios)\n",
     "vmb_2025_concat.to_csv('C:/Users/novo1/OneDrive/Desktop/Dev/Rentabilidade Anual/Bases/Venda Mesal Bruta/2025/vmb_2025_concat.csv', index=False)\n",
+    "print(\"Todas as Bases Concatenadas\")\n",
     "        "
    ]
   },
