Colocando as bases em um Banco de Dados!!!!!!

--- a/teste.ipynb
+++ b/teste.ipynb
@@ -14,45 +14,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "faba7353",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'Mês': 'Janeiro',\n",
-       "  'Taxa_cartão': 0.083,\n",
-       "  'Impostos': 0.076,\n",
-       "  'Comissao': 0.04,\n",
-       "  'Custo_Sobre_Venda': 0.199},\n",
-       " {'Mês': 'Fevereiro',\n",
-       "  'Taxa_cartão': 0.077,\n",
-       "  'Impostos': 0.078,\n",
-       "  'Comissao': 0.04,\n",
-       "  'Custo_Sobre_Venda': 0.195},\n",
-       " {'Mês': 'Março',\n",
-       "  'Taxa_cartão': 0.079,\n",
-       "  'Impostos': 0.082,\n",
-       "  'Comissao': 0.04,\n",
-       "  'Custo_Sobre_Venda': 0.201},\n",
-       " {'Mês': 'Abril',\n",
-       "  'Taxa_cartão': 0.066,\n",
-       "  'Impostos': 0.0606,\n",
-       "  'Comissao': 0.04,\n",
-       "  'Custo_Sobre_Venda': 0.1666},\n",
-       " {'Mês': 'Maio',\n",
-       "  'Taxa_cartão': 0.079,\n",
-       "  'Impostos': 0.064,\n",
-       "  'Comissao': 0.04,\n",
-       "  'Custo_Sobre_Venda': 0.18300000000000002}]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = pd.read_excel(\"C:/Users/novo1/OneDrive/Desktop/Dev/Rentabilidade Anual/Bases/Custos Fixos/2025/CF-txSala_Mensal.xlsx\", sheet_name=\"IMP + CART\")\n",
     "\n",
@@ -63,31 +28,225 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "8d2c94e6",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "InsertManyResult([ObjectId('6855ad9466e0442d3cf0283b'), ObjectId('6855ad9466e0442d3cf0283c'), ObjectId('6855ad9466e0442d3cf0283d'), ObjectId('6855ad9466e0442d3cf0283e'), ObjectId('6855ad9466e0442d3cf0283f')], acknowledged=True)"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "subir_dados_mongodb(\"rentabilidade_anual\",\"impostos_taxas_2025\",base)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "bfce11cd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unidade</th>\n",
+       "      <th>Mês</th>\n",
+       "      <th>Custo Fixo + Bko</th>\n",
+       "      <th>Dias uteis</th>\n",
+       "      <th>Hora/Dia</th>\n",
+       "      <th>Salas</th>\n",
+       "      <th>Minutos Disponivel</th>\n",
+       "      <th>Taxa Sala (Hr)</th>\n",
+       "      <th>Taxa Sala (Min)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>JARDINS</td>\n",
+       "      <td>Janeiro</td>\n",
+       "      <td>219192.606875</td>\n",
+       "      <td>24</td>\n",
+       "      <td>10.166667</td>\n",
+       "      <td>8</td>\n",
+       "      <td>117120</td>\n",
+       "      <td>112.291295</td>\n",
+       "      <td>1.871522</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>SANTO AMARO</td>\n",
+       "      <td>Janeiro</td>\n",
+       "      <td>109709.414375</td>\n",
+       "      <td>24</td>\n",
+       "      <td>10.166667</td>\n",
+       "      <td>6</td>\n",
+       "      <td>87840</td>\n",
+       "      <td>74.938125</td>\n",
+       "      <td>1.248969</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>TATUAPÉ</td>\n",
+       "      <td>Janeiro</td>\n",
+       "      <td>135886.370250</td>\n",
+       "      <td>24</td>\n",
+       "      <td>10.166667</td>\n",
+       "      <td>5</td>\n",
+       "      <td>73200</td>\n",
+       "      <td>111.382271</td>\n",
+       "      <td>1.856371</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>SANTOS</td>\n",
+       "      <td>Janeiro</td>\n",
+       "      <td>118338.444375</td>\n",
+       "      <td>24</td>\n",
+       "      <td>10.166667</td>\n",
+       "      <td>8</td>\n",
+       "      <td>117120</td>\n",
+       "      <td>60.624203</td>\n",
+       "      <td>1.010403</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>IPIRANGA</td>\n",
+       "      <td>Janeiro</td>\n",
+       "      <td>90353.068750</td>\n",
+       "      <td>24</td>\n",
+       "      <td>10.166667</td>\n",
+       "      <td>6</td>\n",
+       "      <td>87840</td>\n",
+       "      <td>61.716577</td>\n",
+       "      <td>1.028610</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>TUCURUVI</td>\n",
+       "      <td>Maio</td>\n",
+       "      <td>102487.952345</td>\n",
+       "      <td>24</td>\n",
+       "      <td>10.166667</td>\n",
+       "      <td>6</td>\n",
+       "      <td>87840</td>\n",
+       "      <td>70.005432</td>\n",
+       "      <td>1.166757</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>LAPA</td>\n",
+       "      <td>Maio</td>\n",
+       "      <td>87424.102345</td>\n",
+       "      <td>24</td>\n",
+       "      <td>10.166667</td>\n",
+       "      <td>6</td>\n",
+       "      <td>87840</td>\n",
+       "      <td>59.715917</td>\n",
+       "      <td>0.995265</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>ITAIM</td>\n",
+       "      <td>Maio</td>\n",
+       "      <td>64856.225407</td>\n",
+       "      <td>24</td>\n",
+       "      <td>10.166667</td>\n",
+       "      <td>4</td>\n",
+       "      <td>58560</td>\n",
+       "      <td>66.451051</td>\n",
+       "      <td>1.107518</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>VILA MASCOTE</td>\n",
+       "      <td>Maio</td>\n",
+       "      <td>69985.603101</td>\n",
+       "      <td>24</td>\n",
+       "      <td>10.166667</td>\n",
+       "      <td>5</td>\n",
+       "      <td>73200</td>\n",
+       "      <td>57.365248</td>\n",
+       "      <td>0.956087</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>GUARULHOS</td>\n",
+       "      <td>Maio</td>\n",
+       "      <td>76120.077713</td>\n",
+       "      <td>24</td>\n",
+       "      <td>10.166667</td>\n",
+       "      <td>5</td>\n",
+       "      <td>73200</td>\n",
+       "      <td>62.393506</td>\n",
+       "      <td>1.039892</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Unidade      Mês  Custo Fixo + Bko  Dias uteis   Hora/Dia  Salas  \\\n",
+       "0        JARDINS  Janeiro     219192.606875          24  10.166667      8   \n",
+       "1    SANTO AMARO  Janeiro     109709.414375          24  10.166667      6   \n",
+       "2        TATUAPÉ  Janeiro     135886.370250          24  10.166667      5   \n",
+       "3         SANTOS  Janeiro     118338.444375          24  10.166667      8   \n",
+       "4       IPIRANGA  Janeiro      90353.068750          24  10.166667      6   \n",
+       "..           ...      ...               ...         ...        ...    ...   \n",
+       "95      TUCURUVI     Maio     102487.952345          24  10.166667      6   \n",
+       "96          LAPA     Maio      87424.102345          24  10.166667      6   \n",
+       "97         ITAIM     Maio      64856.225407          24  10.166667      4   \n",
+       "98  VILA MASCOTE     Maio      69985.603101          24  10.166667      5   \n",
+       "99     GUARULHOS     Maio      76120.077713          24  10.166667      5   \n",
+       "\n",
+       "    Minutos Disponivel  Taxa Sala (Hr)  Taxa Sala (Min)  \n",
+       "0               117120      112.291295         1.871522  \n",
+       "1                87840       74.938125         1.248969  \n",
+       "2                73200      111.382271         1.856371  \n",
+       "3               117120       60.624203         1.010403  \n",
+       "4                87840       61.716577         1.028610  \n",
+       "..                 ...             ...              ...  \n",
+       "95               87840       70.005432         1.166757  \n",
+       "96               87840       59.715917         0.995265  \n",
+       "97               58560       66.451051         1.107518  \n",
+       "98               73200       57.365248         0.956087  \n",
+       "99               73200       62.393506         1.039892  \n",
+       "\n",
+       "[100 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pegar_dados_mongodb(\"rentabilidade_anual\",\"custos_fixos_2025\")"
    ]
