--- a/tratando_bases.ipynb
+++ b/tratando_bases.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "2ebd5e52",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "b77dc804",
    "metadata": {},
    "outputs": [],
@@ -1660,6 +1660,58 @@
     "B = df_final.loc[df_final['Unidade'] == \"JARDINS\"]\n",
     "\n",
     "B"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c7eb7729",
+   "metadata": {},
+   "source": [
+    "### Appointments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10dd17a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Base agd_2024_01.xlsx Concatenada com Sucesso!\n",
+      "Base agd_2024_02.xlsx Concatenada com Sucesso!\n",
+      "Base agd_2024_03.xlsx Concatenada com Sucesso!\n",
+      "Base agd_2024_04.xlsx Concatenada com Sucesso!\n",
+      "Base agd_2024_05.xlsx Concatenada com Sucesso!\n",
+      "Base agd_2024_06.xlsx Concatenada com Sucesso!\n",
+      "Base agd_2024_07.xlsx Concatenada com Sucesso!\n",
+      "Base agd_2024_08.xlsx Concatenada com Sucesso!\n",
+      "Base agd_2024_09.xlsx Concatenada com Sucesso!\n",
+      "Base agd_2024_10.xlsx Concatenada com Sucesso!\n",
+      "Base agd_2024_11.xlsx Concatenada com Sucesso!\n",
+      "Base agd_2024_12.xlsx Concatenada com Sucesso!\n",
+      "Todas as Bases Concatenadas\n"
+     ]
+    }
+   ],
+   "source": [
+    "arquivos = os.listdir(\"C:/Users/novo1/OneDrive/Desktop/Dev/Rentabilidade Anual/Bases/Agendamento/2024\")\n",
+    "\n",
+    "lista_arquvios = []\n",
+    "\n",
+    "for arquivo in arquivos:\n",
+    "    if arquivo.endswith('.xlsx'):\n",
+    "        df = pd.read_excel(f'C:/Users/novo1/OneDrive/Desktop/Dev/Rentabilidade Anual/Bases/Agendamento/2024/{arquivo}')\n",
+    "        lista_arquvios.append(df)\n",
+    "        print(f\"Base {arquivo} Concatenada com Sucesso!\")\n",
+    "    \n",
+    "\n",
+    "\n",
+    "appointments_2024_concat = pd.concat(lista_arquvios)\n",
+    "appointments_2024_concat.to_csv('C:/Users/novo1/OneDrive/Desktop/Dev/Rentabilidade Anual/Bases/Agendamento/2024/appointments_2024_concat.csv', index=False)\n",
+    "print(\"Todas as Bases Concatenadas\")"
    ]
   }
  ],
