--- a/Functions/cortesy.ipynb
+++ b/Functions/cortesy.ipynb
@@ -10,20 +10,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "58bd6707",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'Functions'",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Todos os Procedimentos foram Mapeados com sucesso!\n",
+      "Todos os tempos foram mapeados com sucesso!\n",
+      "Todos os custos foram mapeados com sucesso!\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\novo1\\OneDrive\\Desktop\\Dev\\Rentabilidade Anual\\Functions\\vmb.py:30: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  vmb_concat.loc['Data venda'] = pd.to_datetime(vmb_concat['Data venda'], errors='coerce')\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "Can only use .dt accessor with datetimelike values",
      "output_type": "error",
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[46]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mdictionaries\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m obter_dicionarios\n\u001b[32m      5\u001b[39m \u001b[38;5;66;03m#from mongo import *\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mvmb\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m criando_df_final_Rentabilidade\n\u001b[32m      8\u001b[39m \u001b[38;5;66;03m## Treating Appointments:\u001b[39;00m\n\u001b[32m      9\u001b[39m \n\u001b[32m     10\u001b[39m \u001b[38;5;66;03m# Function to Treat Appointments to cortesy analysis\u001b[39;00m\n\u001b[32m     11\u001b[39m \u001b[38;5;66;03m# Concat Bases\u001b[39;00m\n\u001b[32m     13\u001b[39m appointments_concat = \u001b[33m\"\u001b[39m\u001b[33mC:/Users/novo1/OneDrive/Desktop/Dev/Rentabilidade Anual/Bases/Agendamento/2024/appointments_2024_concat.csv\u001b[39m\u001b[33m\"\u001b[39m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\novo1\\OneDrive\\Desktop\\Dev\\Rentabilidade Anual\\Functions\\vmb.py:6\u001b[39m\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mglob\u001b[39;00m\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpathlib\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Path\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mFunctions\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mdictionaries\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m obter_dicionarios\n\u001b[32m      7\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mFunctions\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mmongo\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m *\n\u001b[32m      8\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mstreamlit\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mst\u001b[39;00m\n",
-      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'Functions'"
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 143\u001b[39m\n\u001b[32m    140\u001b[39m vmb_concat = pd.read_csv(\u001b[33m\"\u001b[39m\u001b[33mC:/Users/novo1/OneDrive/Desktop/Dev/Rentabilidade Anual/Bases/teste_para_cortesia/vmb_2024_concat.csv\u001b[39m\u001b[33m\"\u001b[39m, low_memory=\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[32m    141\u001b[39m df_taxas = pd.read_excel(\u001b[33m'\u001b[39m\u001b[33mC:/Users/novo1/OneDrive/Desktop/Dev/Rentabilidade Anual/Bases/teste_para_cortesia/CF-txSala.xlsx\u001b[39m\u001b[33m'\u001b[39m,sheet_name=\u001b[33m\"\u001b[39m\u001b[33mIMP + CART\u001b[39m\u001b[33m\"\u001b[39m)        \n\u001b[32m--> \u001b[39m\u001b[32m143\u001b[39m df_final, df_ociosidade = \u001b[43mcriando_df_final_Rentabilidade\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcusto_fixo\u001b[49m\u001b[43m,\u001b[49m\u001b[43mvmb_concat\u001b[49m\u001b[43m,\u001b[49m\u001b[43mdf_taxas\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    145\u001b[39m df_ociosidade\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\novo1\\OneDrive\\Desktop\\Dev\\Rentabilidade Anual\\Functions\\vmb.py:32\u001b[39m, in \u001b[36mcriando_df_final_Rentabilidade\u001b[39m\u001b[34m(custo_fixo, vmb_concat, df_taxas)\u001b[39m\n\u001b[32m     30\u001b[39m vmb_concat.loc[\u001b[33m'\u001b[39m\u001b[33mData venda\u001b[39m\u001b[33m'\u001b[39m] = pd.to_datetime(vmb_concat[\u001b[33m'\u001b[39m\u001b[33mData venda\u001b[39m\u001b[33m'\u001b[39m], errors=\u001b[33m'\u001b[39m\u001b[33mcoerce\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m     31\u001b[39m \u001b[38;5;66;03m#Criando coluna de Ano:\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m32\u001b[39m vmb_concat.loc[\u001b[33m'\u001b[39m\u001b[33mAno de venda\u001b[39m\u001b[33m'\u001b[39m] = \u001b[43mvmb_concat\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mData venda\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m.\u001b[49m\u001b[43mdt\u001b[49m.year\n\u001b[32m     34\u001b[39m columns_to_fill_nan = [\u001b[33m'\u001b[39m\u001b[33mValor liquido item\u001b[39m\u001b[33m'\u001b[39m,\u001b[33m'\u001b[39m\u001b[33mValor tabela item\u001b[39m\u001b[33m'\u001b[39m,\u001b[33m'\u001b[39m\u001b[33mValor líquido\u001b[39m\u001b[33m'\u001b[39m]\n\u001b[32m     36\u001b[39m vmb_concat[columns_to_fill_nan] = vmb_concat[columns_to_fill_nan].fillna(\u001b[32m0\u001b[39m)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\novo1\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pandas\\core\\generic.py:6299\u001b[39m, in \u001b[36mNDFrame.__getattr__\u001b[39m\u001b[34m(self, name)\u001b[39m\n\u001b[32m   6292\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m (\n\u001b[32m   6293\u001b[39m     name \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m._internal_names_set\n\u001b[32m   6294\u001b[39m     \u001b[38;5;129;01mand\u001b[39;00m name \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m._metadata\n\u001b[32m   6295\u001b[39m     \u001b[38;5;129;01mand\u001b[39;00m name \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m._accessors\n\u001b[32m   6296\u001b[39m     \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28mself\u001b[39m._info_axis._can_hold_identifiers_and_holds_name(name)\n\u001b[32m   6297\u001b[39m ):\n\u001b[32m   6298\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m[name]\n\u001b[32m-> \u001b[39m\u001b[32m6299\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mobject\u001b[39;49m\u001b[43m.\u001b[49m\u001b[34;43m__getattribute__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mname\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\novo1\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pandas\\core\\accessor.py:224\u001b[39m, in \u001b[36mCachedAccessor.__get__\u001b[39m\u001b[34m(self, obj, cls)\u001b[39m\n\u001b[32m    221\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m obj \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m    222\u001b[39m     \u001b[38;5;66;03m# we're accessing the attribute of the class, i.e., Dataset.geo\u001b[39;00m\n\u001b[32m    223\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m._accessor\n\u001b[32m--> \u001b[39m\u001b[32m224\u001b[39m accessor_obj = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_accessor\u001b[49m\u001b[43m(\u001b[49m\u001b[43mobj\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    225\u001b[39m \u001b[38;5;66;03m# Replace the property with the accessor object. Inspired by:\u001b[39;00m\n\u001b[32m    226\u001b[39m \u001b[38;5;66;03m# https://www.pydanny.com/cached-property.html\u001b[39;00m\n\u001b[32m    227\u001b[39m \u001b[38;5;66;03m# We need to use object.__setattr__ because we overwrite __setattr__ on\u001b[39;00m\n\u001b[32m    228\u001b[39m \u001b[38;5;66;03m# NDFrame\u001b[39;00m\n\u001b[32m    229\u001b[39m \u001b[38;5;28mobject\u001b[39m.\u001b[34m__setattr__\u001b[39m(obj, \u001b[38;5;28mself\u001b[39m._name, accessor_obj)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\novo1\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pandas\\core\\indexes\\accessors.py:643\u001b[39m, in \u001b[36mCombinedDatetimelikeProperties.__new__\u001b[39m\u001b[34m(cls, data)\u001b[39m\n\u001b[32m    640\u001b[39m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(data.dtype, PeriodDtype):\n\u001b[32m    641\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m PeriodProperties(data, orig)\n\u001b[32m--> \u001b[39m\u001b[32m643\u001b[39m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33mCan only use .dt accessor with datetimelike values\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mAttributeError\u001b[39m: Can only use .dt accessor with datetimelike values"
      ]
     }
    ],
@@ -32,8 +55,8 @@
     "import numpy as np\n",
     "import streamlit as st\n",
     "from dictionaries import obter_dicionarios\n",
-    "#from mongo import *\n",
     "from vmb import criando_df_final_Rentabilidade\n",
+    "#from mongo import *\n",
     "\n",
     "## Treating Appointments:\n",
     "\n",
@@ -167,18 +190,18 @@
     "\n",
     "# Calling the others dataframes that we need (VMB and idle rate)\n",
     "custo_fixo = pd.read_excel('C:/Users/novo1/OneDrive/Desktop/Dev/Rentabilidade Anual/Bases/teste_para_cortesia/CF-txSala.xlsx')\n",
-    "vmb_concat = pd.read_csv(\"C:/Users/novo1/OneDrive/Desktop/Dev/Rentabilidade Anual/Bases/teste_para_cortesia/vmb_2024_concat.csv\")\n",
+    "vmb_concat = pd.read_csv(\"C:/Users/novo1/OneDrive/Desktop/Dev/Rentabilidade Anual/Bases/teste_para_cortesia/vmb_2024_concat.csv\", low_memory=False)\n",
     "df_taxas = pd.read_excel('C:/Users/novo1/OneDrive/Desktop/Dev/Rentabilidade Anual/Bases/teste_para_cortesia/CF-txSala.xlsx',sheet_name=\"IMP + CART\")        \n",
     "\n",
-    "df_final = criando_df_final_Rentabilidade(custo_fixo,vmb_concat,df_taxas)\n",
+    "df_final, df_ociosidade = criando_df_final_Rentabilidade(custo_fixo,vmb_concat,df_taxas)\n",
     "\n",
-    "df_final\n",
+    "df_ociosidade\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "id": "84b46ce2",
    "metadata": {},
    "outputs": [],
