--- a/Functions/cortesy.ipynb
+++ b/Functions/cortesy.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "58bd6707",
    "metadata": {},
    "outputs": [
@@ -24,15 +24,391 @@
      ]
     },
     {
-     "ename": "AttributeError",
-     "evalue": "'tuple' object has no attribute 'copy'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 146\u001b[39m\n\u001b[32m    142\u001b[39m df_taxas = pd.read_excel(\u001b[33m'\u001b[39m\u001b[33mC:/Users/novo1/OneDrive/Desktop/Dev/Rentabilidade Anual/Bases/teste_para_cortesia/CF-txSala.xlsx\u001b[39m\u001b[33m'\u001b[39m,sheet_name=\u001b[33m\"\u001b[39m\u001b[33mIMP + CART\u001b[39m\u001b[33m\"\u001b[39m)        \n\u001b[32m    144\u001b[39m df_final = criando_df_final_Rentabilidade(custo_fixo,vmb_concat,df_taxas)\n\u001b[32m--> \u001b[39m\u001b[32m146\u001b[39m ah = \u001b[43mdf_final\u001b[49m\u001b[43m.\u001b[49m\u001b[43mcopy\u001b[49m()\n\u001b[32m    148\u001b[39m ah\n",
-      "\u001b[31mAttributeError\u001b[39m: 'tuple' object has no attribute 'copy'"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID orçamento</th>\n",
+       "      <th>ID cliente</th>\n",
+       "      <th>Status</th>\n",
+       "      <th>Mês venda</th>\n",
+       "      <th>Ano de venda</th>\n",
+       "      <th>Unidade</th>\n",
+       "      <th>Valor líquido</th>\n",
+       "      <th>Procedimento_padronizado</th>\n",
+       "      <th>Quantidade</th>\n",
+       "      <th>Valor tabela item</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Custo Insumos</th>\n",
+       "      <th>Custo Mod</th>\n",
+       "      <th>Custo Direto Total</th>\n",
+       "      <th>Custo Sobre Venda Final</th>\n",
+       "      <th>Cortesia?</th>\n",
+       "      <th>Taxa Sala (Min)</th>\n",
+       "      <th>Taxa Ociosidade (Min)</th>\n",
+       "      <th>Custo Fixo</th>\n",
+       "      <th>Custo Total</th>\n",
+       "      <th>Lucro</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>342416</td>\n",
+       "      <td>894220.0</td>\n",
+       "      <td>Finalizado</td>\n",
+       "      <td>Janeiro</td>\n",
+       "      <td>2024.0</td>\n",
+       "      <td>CAMPINAS</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>PRÓ-LIPO</td>\n",
+       "      <td>1</td>\n",
+       "      <td>290.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3.41</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>46.51</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.601016</td>\n",
+       "      <td>3.208021</td>\n",
+       "      <td>57.135565</td>\n",
+       "      <td>103.645565</td>\n",
+       "      <td>-103.645565</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>344454</td>\n",
+       "      <td>404745.0</td>\n",
+       "      <td>Finalizado</td>\n",
+       "      <td>Janeiro</td>\n",
+       "      <td>2024.0</td>\n",
+       "      <td>CAMPINAS</td>\n",
+       "      <td>1380.0</td>\n",
+       "      <td>LAVIEEN</td>\n",
+       "      <td>4</td>\n",
+       "      <td>345.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>167.48</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>392.48</td>\n",
+       "      <td>363.816150</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.601016</td>\n",
+       "      <td>3.208021</td>\n",
+       "      <td>228.542260</td>\n",
+       "      <td>984.838411</td>\n",
+       "      <td>395.161589</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>344941</td>\n",
+       "      <td>656876.0</td>\n",
+       "      <td>Finalizado</td>\n",
+       "      <td>Janeiro</td>\n",
+       "      <td>2024.0</td>\n",
+       "      <td>JARDINS</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>SCULPTRA</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2500.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>21.49</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>1034.49</td>\n",
+       "      <td>659.087229</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2.136979</td>\n",
+       "      <td>3.284508</td>\n",
+       "      <td>162.644617</td>\n",
+       "      <td>1856.221846</td>\n",
+       "      <td>643.778154</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>345688</td>\n",
+       "      <td>897208.0</td>\n",
+       "      <td>Finalizado</td>\n",
+       "      <td>Janeiro</td>\n",
+       "      <td>2024.0</td>\n",
+       "      <td>MOEMA</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>LIMPEZA DE PELE</td>\n",
+       "      <td>2</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4.12</td>\n",
+       "      <td>46.6</td>\n",
+       "      <td>69.40</td>\n",
+       "      <td>26.363489</td>\n",
+       "      <td>False</td>\n",
+       "      <td>1.144422</td>\n",
+       "      <td>3.750417</td>\n",
+       "      <td>587.380634</td>\n",
+       "      <td>683.144123</td>\n",
+       "      <td>-583.144123</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>346845</td>\n",
+       "      <td>847721.0</td>\n",
+       "      <td>Finalizado</td>\n",
+       "      <td>Janeiro</td>\n",
+       "      <td>2024.0</td>\n",
+       "      <td>CAMPINAS</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>LIMPEZA DE PELE</td>\n",
+       "      <td>1</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2.06</td>\n",
+       "      <td>23.3</td>\n",
+       "      <td>34.70</td>\n",
+       "      <td>23.727140</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.601016</td>\n",
+       "      <td>3.208021</td>\n",
+       "      <td>228.542260</td>\n",
+       "      <td>286.969400</td>\n",
+       "      <td>-196.969400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>68862</th>\n",
+       "      <td>423772</td>\n",
+       "      <td>408674.0</td>\n",
+       "      <td>Finalizado</td>\n",
+       "      <td>Dezembro</td>\n",
+       "      <td>2024.0</td>\n",
+       "      <td>JARDINS</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>SECAGEM</td>\n",
+       "      <td>1</td>\n",
+       "      <td>190.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2.11</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>21.59</td>\n",
+       "      <td>27.420627</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2.136979</td>\n",
+       "      <td>3.070631</td>\n",
+       "      <td>156.228309</td>\n",
+       "      <td>205.238936</td>\n",
+       "      <td>-85.238936</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>68863</th>\n",
+       "      <td>423773</td>\n",
+       "      <td>847094.0</td>\n",
+       "      <td>Finalizado</td>\n",
+       "      <td>Dezembro</td>\n",
+       "      <td>2024.0</td>\n",
+       "      <td>SANTOS</td>\n",
+       "      <td>2750.0</td>\n",
+       "      <td>ULTRAFORMER FULLFACE</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2300.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>13.96</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>736.46</td>\n",
+       "      <td>342.757838</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.927813</td>\n",
+       "      <td>2.482690</td>\n",
+       "      <td>204.630174</td>\n",
+       "      <td>1283.848012</td>\n",
+       "      <td>216.151988</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>68864</th>\n",
+       "      <td>423773</td>\n",
+       "      <td>847094.0</td>\n",
+       "      <td>Finalizado</td>\n",
+       "      <td>Dezembro</td>\n",
+       "      <td>2024.0</td>\n",
+       "      <td>SANTOS</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>ULTRAFORMER PESCOÇO</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1500.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>13.96</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>463.96</td>\n",
+       "      <td>182.804180</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.927813</td>\n",
+       "      <td>2.482690</td>\n",
+       "      <td>136.420116</td>\n",
+       "      <td>783.184297</td>\n",
+       "      <td>16.815703</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>68865</th>\n",
+       "      <td>423773</td>\n",
+       "      <td>847094.0</td>\n",
+       "      <td>Finalizado</td>\n",
+       "      <td>Dezembro</td>\n",
+       "      <td>2024.0</td>\n",
+       "      <td>SANTOS</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>ULTRAFORMER PAPADA</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1049.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>13.96</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>253.96</td>\n",
+       "      <td>102.827351</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.927813</td>\n",
+       "      <td>2.482690</td>\n",
+       "      <td>102.315087</td>\n",
+       "      <td>459.102439</td>\n",
+       "      <td>-9.102439</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>68866</th>\n",
+       "      <td>423864</td>\n",
+       "      <td>847094.0</td>\n",
+       "      <td>Finalizado</td>\n",
+       "      <td>Dezembro</td>\n",
+       "      <td>2024.0</td>\n",
+       "      <td>COPACABANA</td>\n",
+       "      <td>1500.0</td>\n",
+       "      <td>LAVIEEN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1049.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>41.87</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>98.12</td>\n",
+       "      <td>102.827351</td>\n",
+       "      <td>False</td>\n",
+       "      <td>1.717774</td>\n",
+       "      <td>0.698418</td>\n",
+       "      <td>36.242875</td>\n",
+       "      <td>237.190227</td>\n",
+       "      <td>212.809773</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>68867 rows × 25 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       ID orçamento  ID cliente      Status Mês venda  Ano de venda  \\\n",
+       "0            342416    894220.0  Finalizado   Janeiro        2024.0   \n",
+       "1            344454    404745.0  Finalizado   Janeiro        2024.0   \n",
+       "2            344941    656876.0  Finalizado   Janeiro        2024.0   \n",
+       "3            345688    897208.0  Finalizado   Janeiro        2024.0   \n",
+       "4            346845    847721.0  Finalizado   Janeiro        2024.0   \n",
+       "...             ...         ...         ...       ...           ...   \n",
+       "68862        423772    408674.0  Finalizado  Dezembro        2024.0   \n",
+       "68863        423773    847094.0  Finalizado  Dezembro        2024.0   \n",
+       "68864        423773    847094.0  Finalizado  Dezembro        2024.0   \n",
+       "68865        423773    847094.0  Finalizado  Dezembro        2024.0   \n",
+       "68866        423864    847094.0  Finalizado  Dezembro        2024.0   \n",
+       "\n",
+       "          Unidade  Valor líquido Procedimento_padronizado  Quantidade  \\\n",
+       "0        CAMPINAS            0.0                 PRÓ-LIPO           1   \n",
+       "1        CAMPINAS         1380.0                  LAVIEEN           4   \n",
+       "2         JARDINS            0.0                 SCULPTRA           1   \n",
+       "3           MOEMA          100.0          LIMPEZA DE PELE           2   \n",
+       "4        CAMPINAS           90.0          LIMPEZA DE PELE           1   \n",
+       "...           ...            ...                      ...         ...   \n",
+       "68862     JARDINS            0.0                  SECAGEM           1   \n",
+       "68863      SANTOS         2750.0     ULTRAFORMER FULLFACE           1   \n",
+       "68864      SANTOS            0.0      ULTRAFORMER PESCOÇO           1   \n",
+       "68865      SANTOS            0.0       ULTRAFORMER PAPADA           1   \n",
+       "68866  COPACABANA         1500.0                  LAVIEEN           1   \n",
+       "\n",
+       "       Valor tabela item  ...  Custo Insumos  Custo Mod  Custo Direto Total  \\\n",
+       "0                  290.0  ...           3.41       20.0               46.51   \n",
+       "1                  345.0  ...         167.48        0.0              392.48   \n",
+       "2                 2500.0  ...          21.49       75.0             1034.49   \n",
+       "3                   50.0  ...           4.12       46.6               69.40   \n",
+       "4                   90.0  ...           2.06       23.3               34.70   \n",
+       "...                  ...  ...            ...        ...                 ...   \n",
+       "68862              190.0  ...           2.11       15.0               21.59   \n",
+       "68863             2300.0  ...          13.96       40.0              736.46   \n",
+       "68864             1500.0  ...          13.96       30.0              463.96   \n",
+       "68865             1049.0  ...          13.96       30.0              253.96   \n",
+       "68866             1049.0  ...          41.87        0.0               98.12   \n",
+       "\n",
+       "       Custo Sobre Venda Final  Cortesia?  Taxa Sala (Min)  \\\n",
+       "0                     0.000000       True         0.601016   \n",
+       "1                   363.816150      False         0.601016   \n",
+       "2                   659.087229      False         2.136979   \n",
+       "3                    26.363489      False         1.144422   \n",
+       "4                    23.727140      False         0.601016   \n",
+       "...                        ...        ...              ...   \n",
+       "68862                27.420627      False         2.136979   \n",
+       "68863               342.757838      False         0.927813   \n",
+       "68864               182.804180      False         0.927813   \n",
+       "68865               102.827351      False         0.927813   \n",
+       "68866               102.827351      False         1.717774   \n",
+       "\n",
+       "       Taxa Ociosidade (Min)  Custo Fixo  Custo Total       Lucro  \n",
+       "0                   3.208021   57.135565   103.645565 -103.645565  \n",
+       "1                   3.208021  228.542260   984.838411  395.161589  \n",
+       "2                   3.284508  162.644617  1856.221846  643.778154  \n",
+       "3                   3.750417  587.380634   683.144123 -583.144123  \n",
+       "4                   3.208021  228.542260   286.969400 -196.969400  \n",
+       "...                      ...         ...          ...         ...  \n",
+       "68862               3.070631  156.228309   205.238936  -85.238936  \n",
+       "68863               2.482690  204.630174  1283.848012  216.151988  \n",
+       "68864               2.482690  136.420116   783.184297   16.815703  \n",
+       "68865               2.482690  102.315087   459.102439   -9.102439  \n",
+       "68866               0.698418   36.242875   237.190227  212.809773  \n",
+       "\n",
+       "[68867 rows x 25 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -181,9 +557,7 @@
     "\n",
     "df_final = criando_df_final_Rentabilidade(custo_fixo,vmb_concat,df_taxas)\n",
     "\n",
-    "ah = df_final.copy()\n",
-    "\n",
-    "ah\n"
+    "df_final"
    ]
   },
   {
