correcting the filter of status on criando_df_final

--- a/cortesy.ipynb
+++ b/cortesy.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 16,
    "id": "58bd6707",
    "metadata": {},
    "outputs": [
@@ -44,108 +44,162 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Valor liquido item</th>\n",
-       "      <th>Custo Total</th>\n",
-       "      <th>Lucro</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>ID cliente</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
+       "      <th>Procedimento_padronizado</th>\n",
+       "      <th>Quantidade</th>\n",
+       "      <th>Custo_Cortesia</th>\n",
+       "      <th>Receita Gerada</th>\n",
+       "      <th>Custo Total</th>\n",
+       "      <th>Lucro/Prejuízo</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2.0</th>\n",
+       "      <th>0</th>\n",
+       "      <td>2</td>\n",
+       "      <td>LAVIEEN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>41.630095</td>\n",
        "      <td>1500.0</td>\n",
        "      <td>2878.314129</td>\n",
-       "      <td>-1378.314129</td>\n",
+       "      <td>-1378.31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>690.0</th>\n",
+       "      <th>1</th>\n",
+       "      <td>72</td>\n",
+       "      <td>LAVIEEN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>57.174472</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>330</td>\n",
+       "      <td>DRENAGEM (30 MIN)</td>\n",
+       "      <td>1</td>\n",
+       "      <td>124.732656</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>355</td>\n",
+       "      <td>LAVIEEN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>63.360214</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>690</td>\n",
+       "      <td>LAVIEEN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>76.761042</td>\n",
        "      <td>150.0</td>\n",
        "      <td>65.664686</td>\n",
-       "      <td>84.335314</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1598.0</th>\n",
-       "      <td>986.0</td>\n",
-       "      <td>623.724996</td>\n",
-       "      <td>362.275004</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1605.0</th>\n",
-       "      <td>8030.0</td>\n",
-       "      <td>6249.271539</td>\n",
-       "      <td>1780.728461</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1668.0</th>\n",
-       "      <td>6798.0</td>\n",
-       "      <td>5163.293891</td>\n",
-       "      <td>1634.706109</td>\n",
+       "      <td>84.34</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1011404.0</th>\n",
-       "      <td>892.0</td>\n",
-       "      <td>869.736360</td>\n",
-       "      <td>22.263640</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1011452.0</th>\n",
-       "      <td>2140.0</td>\n",
-       "      <td>2922.992856</td>\n",
-       "      <td>-782.992856</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1011457.0</th>\n",
-       "      <td>1680.0</td>\n",
-       "      <td>1743.751152</td>\n",
-       "      <td>-63.751152</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1011466.0</th>\n",
+       "      <th>29209</th>\n",
+       "      <td>1011466</td>\n",
+       "      <td>DRENAGEM (30 MIN)</td>\n",
+       "      <td>1</td>\n",
+       "      <td>108.414850</td>\n",
        "      <td>550.0</td>\n",
        "      <td>765.677273</td>\n",
-       "      <td>-215.677273</td>\n",
+       "      <td>-215.68</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1011534.0</th>\n",
+       "      <th>29210</th>\n",
+       "      <td>1011466</td>\n",
+       "      <td>PEELING DE DIAMANTE</td>\n",
+       "      <td>1</td>\n",
+       "      <td>108.414850</td>\n",
+       "      <td>550.0</td>\n",
+       "      <td>765.677273</td>\n",
+       "      <td>-215.68</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29211</th>\n",
+       "      <td>1011530</td>\n",
+       "      <td>PEELING DE DIAMANTE</td>\n",
+       "      <td>1</td>\n",
+       "      <td>72.485751</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29212</th>\n",
+       "      <td>1011534</td>\n",
+       "      <td>PEELING DE DIAMANTE</td>\n",
+       "      <td>1</td>\n",
+       "      <td>156.228309</td>\n",
        "      <td>5830.0</td>\n",
        "      <td>4905.833624</td>\n",
-       "      <td>924.166376</td>\n",
+       "      <td>924.17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29213</th>\n",
+       "      <td>1011548</td>\n",
+       "      <td>DRENAGEM (30 MIN)</td>\n",
+       "      <td>1</td>\n",
+       "      <td>156.228309</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>13562 rows × 3 columns</p>\n",
+       "<p>29214 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "            Valor liquido item  Custo Total        Lucro\n",
-       "ID cliente                                              \n",
-       "2.0                     1500.0  2878.314129 -1378.314129\n",
-       "690.0                    150.0    65.664686    84.335314\n",
-       "1598.0                   986.0   623.724996   362.275004\n",
-       "1605.0                  8030.0  6249.271539  1780.728461\n",
-       "1668.0                  6798.0  5163.293891  1634.706109\n",
-       "...                        ...          ...          ...\n",
-       "1011404.0                892.0   869.736360    22.263640\n",
-       "1011452.0               2140.0  2922.992856  -782.992856\n",
-       "1011457.0               1680.0  1743.751152   -63.751152\n",
-       "1011466.0                550.0   765.677273  -215.677273\n",
-       "1011534.0               5830.0  4905.833624   924.166376\n",
+       "       ID cliente Procedimento_padronizado  Quantidade  Custo_Cortesia  \\\n",
+       "0               2                  LAVIEEN           1       41.630095   \n",
+       "1              72                  LAVIEEN           1       57.174472   \n",
+       "2             330        DRENAGEM (30 MIN)           1      124.732656   \n",
+       "3             355                  LAVIEEN           1       63.360214   \n",
+       "4             690                  LAVIEEN           1       76.761042   \n",
+       "...           ...                      ...         ...             ...   \n",
+       "29209     1011466        DRENAGEM (30 MIN)           1      108.414850   \n",
+       "29210     1011466      PEELING DE DIAMANTE           1      108.414850   \n",
+       "29211     1011530      PEELING DE DIAMANTE           1       72.485751   \n",
+       "29212     1011534      PEELING DE DIAMANTE           1      156.228309   \n",
+       "29213     1011548        DRENAGEM (30 MIN)           1      156.228309   \n",
        "\n",
-       "[13562 rows x 3 columns]"
+       "       Receita Gerada  Custo Total  Lucro/Prejuízo  \n",
+       "0              1500.0  2878.314129        -1378.31  \n",
+       "1                 0.0     0.000000            0.00  \n",
+       "2                 0.0     0.000000            0.00  \n",
+       "3                 0.0     0.000000            0.00  \n",
+       "4               150.0    65.664686           84.34  \n",
+       "...               ...          ...             ...  \n",
+       "29209           550.0   765.677273         -215.68  \n",
+       "29210           550.0   765.677273         -215.68  \n",
+       "29211             0.0     0.000000            0.00  \n",
+       "29212          5830.0  4905.833624          924.17  \n",
+       "29213             0.0     0.000000            0.00  \n",
+       "\n",
+       "[29214 rows x 7 columns]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,8 +208,8 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import streamlit as st\n",
-    "from dictionaries import obter_dicionarios\n",
-    "from vmb import criando_df_final_Rentabilidade\n",
+    "from Functions.dictionaries import obter_dicionarios\n",
+    "from Functions.vmb import criando_df_final_Rentabilidade\n",
     "pd.options.mode.chained_assignment = None\n",
     "#from mongo import *\n",
     "\n",
@@ -306,6 +360,7 @@
     "df_final = df_final.loc[df_final['ID cliente'].isin(list_of_clients_cortesy_served)]\n",
     "\n",
     "# Merging the base of cortesy appointments with the idle rate:\n",
+    "# filter the df_final['Unidade', 'Mês venda'].unique()\n",
     "\n",
     "appointments_cortesy = appointments_cortesy.merge(\n",
     "    df_final[['Unidade', 'Mês venda', 'Taxa Ociosidade (Min)','Taxa Sala (Min)']],  # Select only needed columns from df_final\n",
@@ -328,9 +383,25 @@
     "\n",
     "clients_totals = df_final.groupby('ID cliente').agg({\"Valor liquido item\" : 'sum',\n",
     "                                                     \"Custo Total\": 'sum',\n",
-    "                                                     \"Lucro\" : 'sum',})\n",
+    "                                                     \"Lucro\" : 'sum',}).reset_index()\n",
     "\n",
-    "clients_totals"
+    "\n",
+    "\n",
+    "clients_totals = clients_totals.rename(columns={\"Valor liquido item\" : \"Receita Gerada\",\"Lucro\" : \"Lucro/Prejuízo\"})\n",
+    "\n",
+    "gp_aapointments_client_procedure = appointments_cortesy.groupby([\"ID cliente\",'Procedimento_padronizado']).agg({\"Quantidade\" : \"sum\",\"Custo_Fixo\" : \"sum\"}).reset_index()\n",
+    "\n",
+    "gp_aapointments_client_procedure = gp_aapointments_client_procedure.rename(columns={\"Custo_Fixo\" : \"Custo_Cortesia\"})\n",
+    "\n",
+    "df_final_merged_appointments_sales = pd.merge(gp_aapointments_client_procedure,clients_totals[['ID cliente',\"Receita Gerada\",\"Custo Total\",\"Lucro/Prejuízo\"]],\n",
+    "                                              how='left',\n",
+    "                                              on='ID cliente')\n",
+    "\n",
+    "df_final_merged_appointments_sales = df_final_merged_appointments_sales.fillna(0)\n",
+    "\n",
+    "df_final_merged_appointments_sales['Lucro/Prejuízo'] = df_final_merged_appointments_sales['Lucro/Prejuízo'].round(2)\n",
+    "\n",
+    "df_final_merged_appointments_sales"
    ]
   },
   {
