--- a/tratando_bases.ipynb
+++ b/tratando_bases.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "2ebd5e52",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "b77dc804",
    "metadata": {},
    "outputs": [],
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "e3f8296c",
    "metadata": {},
    "outputs": [
@@ -701,6 +701,7 @@
     "\n",
     "vmb_2025_concat = pd.concat(lista_arquvios)\n",
     "vmb_2025_concat.to_csv('C:/Users/novo1/OneDrive/Desktop/Dev/Rentabilidade Anual/Bases/Venda Mesal Bruta/2025/vmb_2025_concat.csv', index=False)\n",
+    "vmb_2025_concat.to_excel('C:/Users/novo1/OneDrive/Desktop/Dev/Rentabilidade Anual/Bases/Venda Mesal Bruta/2025/vmb_2025_concat.xlsx', index=False)\n",
     "print(\"Todas as Bases Concatenadas\")\n",
     "        "
    ]
